--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
-    //CardView
     implementation "androidx.cardview:cardview:1.0.0"
 
+    testImplementation 'org.mockito:mockito-core:3.2.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 
     //room
     def room_version = '2.2.5'
